コード若干修正

--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -5,3 +5,7 @@
 それからもちろんだけどグラディエントノイズで書きたいしやることけっこういろいろあるよ
 それと説明を下の行に追加してみるとか（海の画像自体を別キャンバスにしてそれの下に・・って感じで）。
 このやり方知ってたら双曲タイリングのやつあんな苦労しなかったのにって今更感すごい。
+
+あとさあ最後の方の0.05ってやつ、3.5と500.0から計算して正確な値を出したいのと、
+やっぱfailedでvec3(0.0)が返っちゃうの気持ち悪いからそこら辺なんとかしたい。
+いやなんよね、その、仕様の穴をつく汚いコーディング。あんま好きじゃないのよね。
