マウスのyが逆になっている問題を修正

--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -9,3 +9,5 @@
 あとさあ最後の方の0.05ってやつ、3.5と500.0から計算して正確な値を出したいのと、
 やっぱfailedでvec3(0.0)が返っちゃうの気持ち悪いからそこら辺なんとかしたい。
 いやなんよね、その、仕様の穴をつく汚いコーディング。あんま好きじゃないのよね。
+
+空の場合に修正を施して雲・・まあでも、なぁ。
