--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -11,3 +11,6 @@
 いやなんよね、その、仕様の穴をつく汚いコーディング。あんま好きじゃないのよね。
 
 空の場合に修正を施して雲・・まあでも、なぁ。
+
+マウス値をuniformするときは気を付けてね（気にならない場合もあるっちゃあるんだけど）。
+行列の変換とか、yが逆だと致命的だもんね・・いくら調べても絶対わからんわ、気をつけよ・・。
